Basic Lesson Viewing (#8)
* make temp lesson API for consistent testing

* create basic lesson viewing ability

---------
