# fastapi_backend/app/routes/videos.py
@@ -1,6 +1,6 @@
 from pathlib import Path
 from typing import Optional, Iterator
-from uuid import UUID
+from uuid import UUID, uuid4
 
 from fastapi import APIRouter, Depends, File, Form, HTTPException, UploadFile, Query
 from fastapi.responses import StreamingResponse
@@ -93,11 +93,11 @@ async def generate_video(
         file_bytes = f.read()
     headers = {"content-type": "video/mp4"}
     upload_file = UploadFile(
-        filename=f"Clip.mp4",
+        filename=f"Clip_{str(uuid4())}.mp4",
         file=BytesIO(file_bytes),
         headers=headers
     )
-    return await upload_video(f"Clip", None, upload_file, db, user)
+    return await upload_video(f"testing_video", None, upload_file, db, user)
 
 
 @router.post("/upload", response_model=VideoRead)
@@ -187,11 +187,13 @@ async def get_video(
 async def stream_video(
         video_id: UUID,
         db: AsyncSession = Depends(get_async_session),
-        user: User = Depends(current_active_user),
+        # user: User = Depends(current_active_user),
 ) -> StreamingResponse:
     """Stream a video file"""
     result = await db.execute(
-        select(Video).filter(Video.id == video_id, Video.user_id == user.id)
+        # select(Video).filter(Video.id == video_id, Video.user_id == user.id)
+        select(Video).filter(Video.id == video_id)
+
     )
     video = result.scalars().first()
 
