# local-shared-data/openapi.json
@@ -942,11 +942,6 @@
         "summary": "Stream Video",
         "description": "Stream a video file",
         "operationId": "stream_video",
-        "security": [
-          {
-            "OAuth2PasswordBearer": []
-          }
-        ],
         "parameters": [
           {
             "name": "video_id",
@@ -1348,7 +1343,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "title": "Response Lessons-Get Video By Index"
+                  "$ref": "#/components/schemas/LessonVideoRead"
                 }
               }
             }
@@ -1420,6 +1415,33 @@
             }
           }
         }
+      }
+    },
+    "/lessons/{lesson_id}/temp_lesson": {
+      "post": {
+        "tags": [
+          "lessons"
+        ],
+        "summary": "Create Temp Lesson",
+        "description": "Create a temporary lesson with 2 videos.\nVideo 1 will have a breakpoint, video 2 will not.\nUses existing APIs from videos.py and lesson.py.",
+        "operationId": "create_temp_lesson",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LessonRead"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ]
       }
     }
   },
@@ -1531,6 +1553,44 @@
           "file"
         ],
         "title": "Body_videos-upload_video"
+      },
+      "BreakpointRead": {
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "title": "Id"
+          },
+          "question": {
+            "type": "string",
+            "title": "Question"
+          },
+          "choices": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Choices"
+          },
+          "correct_choice": {
+            "type": "integer",
+            "title": "Correct Choice"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Created At"
+          }
+        },
+        "type": "object",
+        "required": [
+          "id",
+          "question",
+          "choices",
+          "correct_choice",
+          "created_at"
+        ],
+        "title": "BreakpointRead"
       },
       "ErrorModel": {
         "properties": {
@@ -1644,6 +1704,49 @@
           "index"
         ],
         "title": "LessonVideoAddResponse"
+      },
+      "LessonVideoRead": {
+        "properties": {
+          "video_id": {
+            "type": "string",
+            "format": "uuid",
+            "title": "Video Id"
+          },
+          "index": {
+            "type": "integer",
+            "title": "Index"
+          },
+          "breakpoints": {
+            "anyOf": [
+              {
+                "items": {
+                  "$ref": "#/components/schemas/BreakpointRead"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Breakpoints"
+          },
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "title": "Id"
+          },
+          "video": {
+            "$ref": "#/components/schemas/VideoRead"
+          }
+        },
+        "type": "object",
+        "required": [
+          "video_id",
+          "index",
+          "id",
+          "video"
+        ],
+        "title": "LessonVideoRead"
       },
       "Page_VideoRead_": {
         "properties": {
